--- a/BookStore.Models/Bookstore.Models.csproj
+++ b/BookStore.Models/Bookstore.Models.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Bookstore.Utility\Bookstore.Utility.csproj" />
+  </ItemGroup>
+
 </Project>
