--- a/Bookstore/Bookstore.csproj
+++ b/Bookstore/Bookstore.csproj
@@ -27,6 +27,7 @@
     <Folder Include="Areas\Picker\Data\" />
     <Folder Include="Areas\Picker\Models\" />
     <Folder Include="Areas\Picker\Views\" />
+    <Folder Include="Areas\Stockkeeper\PurchaseRequisitions\" />
   </ItemGroup>
 
 </Project>
