--- a/Bookstore/appsettings.json
+++ b/Bookstore/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Bookstore;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Cassandra": {
+    "ContactPoints": [
+      "localhost"
+    ],
+    "Keyspace": "имя_контактного_ключевого_пространства"
   }
 }
