--- a/Minotaur/appsettings.json
+++ b/Minotaur/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Bookstore;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "MinotaurContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Minotaur;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MinotaurContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Minotaur;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Minotaur;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Cassandra": {
     "ContactPoints": [
