--- a/Minotaur.Models/Minotaur.Models.csproj
+++ b/Minotaur.Models/Minotaur.Models.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\Minotaur.Utility\Minotaur.Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="OrganizationalDocumentation\NewFolder\" />
+  </ItemGroup>
+
 </Project>
