--- a/Minotaur/Minotaur.csproj
+++ b/Minotaur/Minotaur.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Customer\API\" />
     <Folder Include="Areas\HR\Controllers\" />
     <Folder Include="Areas\Picker\Controllers\" />
     <Folder Include="Areas\Picker\Views\" />
