--- a/Minotaur.TelegramBot/Minotaur.TelegramBot.csproj
+++ b/Minotaur.TelegramBot/Minotaur.TelegramBot.csproj
@@ -5,11 +5,11 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <StartupObject></StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Telegram.Bot" Version="19.0.0" />
-    <PackageReference Include="Telegram.Bots.Extensions.Polling" Version="5.9.0" />
   </ItemGroup>
 
   <ItemGroup>
