--- a/Minotaur/appsettings.json
+++ b/Minotaur/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Bookstore;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Bookstore;Trusted_Connection=True;MultipleActiveResultSets=true",
   }
 }
